# hack-aisafety-2026

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
docs/: SESSION_STATUS.md  demo_script.md  taxonomy.md  video_script.md
docs/critique/: questions.jsonl  score.md
docs/decisions/: ADR-0001-execution-level-probing.md  ADR-0002-trace-schema.md  ADR-0003-detector-interface.md  ADR-0004-pivot-to-honesty-verifier.md  ADR-0005-honesty-taxonomy.md  ADR-0006-dual-source-truth.md  ADR-0007-stage-compression.md  README.md
docs/devlog/: 0001-2026-04-26-kickoff-and-scaffolding.md  0002-2026-04-26-trace-schema.md  0003-2026-04-26-f001-detector-and-testbed.md  0004-2026-04-26-pivot-to-honesty.md  0005-2026-04-26-presentation-structure.md  0006-2026-04-26-probe-first-decision.md  0007-2026-04-26-dual-source-and-first-tool.md  0008-2026-04-26-scope-pin-and-honest-limits.md  0009-2026-04-26-compresses-reality-framing.md  0010-2026-04-26-pressure-not-task.md  0011-2026-04-26-audit-not-execution.md  README.md
docs/internal/: SESSION_STATUS.md
docs/presentation/: PITCH.md  README.md  air_canada_slide.html  incident_mapping.md  intro.md  live_demo.md  policy_pipeline.md  (+1 more)
examples/: buggy_agent.py  buggy_agent_f001.py  run_demo.py  run_openai_demo.py  run_paraphrase_demo.py  run_pressure_test.py  run_red_team_test.py
experiments/: probe_honesty.py
runs/: red_team_results.jsonl
scripts/: check_gemini_keys.py
tests/: test_adapter_openai_fc.py  test_f001.py  test_h002.py  test_h003.py  test_judges.py  test_observer.py  test_smoke.py  test_trace.py
(+42 files in other folders)
